2014-07-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* index.php: Now the shortcut bar isn't loaded while
	the pandora console is in fullscreen mode.

2014-07-04  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_graph.php: When drawing charts, propagate the last value
	  in the database instead of the value of the last interval (which is the
	  average value for that interval).

	* operation/agentes/estado_monitores.php: Show events for boolean modules by default.

2014-07-04  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php, include/functions_extensions.php:
	fixed the show old update manager and set the correct link in the
	header warning message to update manager.

2014-06-30 Koichiro KIKUCHI <koichiro@rworks.jp>

	* operation/agentes/estado_monitores.php,
	  operation/agentes/status_monitor.php,
	  operation/search_modules.php: Fixed snapshot view title.

2014-06-30 Koichiro KIKUCHI <koichiro@rworks.jp>

	* extensions/agents_modules.php,
	  include/functions_events.php,
	  operation/agentes/estado_monitores.php,
	  operation/agentes/status_monitor.php,
	  operation/search_modules.php,
	  operation/tree.php: Fixed the garbled title issue in the module graph.

2014-06-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/update_manager/update_manager.online.php: set to 500mb the
	check of memory limit.

2014-06-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/license.php: fix the link to new update manager.

2014-06-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/update_manager/update_manager.offline.php,
	godmode/update_manager/update_manager.online.php,
	include/functions_update_manager.php,
	include/ajax/update_manager.ajax.php,
	include/javascript/update_manager.js: a lot of fixes into the update
	manager.

2014-06-26  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/ca.mo
	  include/languages/ca.po
 	  include/languages/cs.mo