@@ -1,3 +1,10 @@
+2014-07-07  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* operation/agentes/alerts_status.php: fixed the pagination with
+	the column sorted.
+	
+	INCIDENT: #977
+
 2014-07-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* index.php: Now the shortcut bar isn't loaded while
